--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "global": "4.3.2",
     "mongoose": "^5.0.10",
-    "webtask-tools": "^3.2.0"
+    "webtask-tools": "^3.2.0",
+    "wt-cli": "9.4.0"
   }
 }
